--- a/styles/app.css
+++ b/styles/app.css
@@ -127,8 +127,7 @@ main{
     display: flex;
     text-align: center;
     flex-direction: column;
-    background-image:url("https://images.unsplash.com/photo-1454117096348-e4abbeba002c?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80");
-    background-color: transparent;
+    background-color: white;
     margin-bottom: 2rem;
     opacity: 0;
     transform: scaleX(0);
